# Turn

./: .gitignore  .turn_heap.json  ARCHITECTURE.md  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  PROVIDERS.md  README.md  SECURITY.md  VISION.md  WHITEPAPER.md  WHITEPAPER.tex  add_gas.py  extract.py  fix_math.py  fix_types.py  install.sh  refactor_tools.py  test.tn
impl/: .gitkeep  .turn_heap.json  Cargo.toml  check.json  errors.txt  fix_arc.py  out.txt  print.tn  run.sh  test.tn  test_agent.tn  test_infer.tn  test_mcp.tn  test_raw_call.tn  test_stripe.tn  test_sys.tn
impl/.turn_cache/macros/: openapi_macro.wasm
impl/.turn_store/: default_agent.json
impl/.turn_test_store/: test_process.json
impl/.turn_test_store_schema/schema_test/: 0.json  1.json  2.json  latest.json
impl/.turn_test_store_url/url_test/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  2.json  4.json  5.json  6.json  7.json  8.json  9.json  latest.json
impl/examples/: boardroom.tn  budget_guardrail.tn  conditionals.tn  conditionals.turn  context_pruning.tn  deep_research.tn  distributed_swarm.tn  echo_test.tn  hello.tn  investment_committee.tn  marketing_agency.tn  marketing_api.py  persistent_agent.tn  pr_reviewer_prod.tn  quant_syndicate.tn  recall.tn  secure_capability.tn  struct_infer.tn  suspend_test.tn  test_wiki.tn
impl/examples/resources/: github_pr_spec.json
impl/macros/fhir_adapter/: Cargo.toml
impl/macros/fhir_adapter/src/: lib.rs
impl/macros/graphql_adapter/: Cargo.toml
impl/macros/graphql_adapter/src/: lib.rs
impl/macros/grpc_adapter/: Cargo.toml
impl/macros/grpc_adapter/src/: lib.rs
impl/macros/odata_adapter/: Cargo.toml
impl/macros/odata_adapter/src/: lib.rs
impl/macros/openapi_adapter/: Cargo.toml
impl/macros/openapi_adapter/src/: lib.rs
impl/macros/soap_adapter/: Cargo.toml
impl/macros/swagger_adapter/: Cargo.toml
impl/macros/swagger_adapter/src/: lib.rs
impl/src/: analysis.rs  ast.rs  bytecode.rs  compiler.rs  lexer.rs  lib.rs  llm_tools.rs  lsp.rs  macro_engine.rs  main.rs  parser.rs  runner.rs  runtime.rs  schema_compiler.rs  server.rs  std_lib.rs  store.rs  tools.rs  value.rs  vm.rs  wasm_host.rs
impl/src/std/: env.tn  fs.tn  json.tn  math.tn  net.tn  regex.tn  time.tn
impl/tests/: advanced_primitives_test.rs  analysis_test.rs  await_receive_test.rs  concurrency_test.rs  data_structures_test.rs  e2e_test.rs  error_handling_test.rs  example_agent.turn  example_agent_test.rs  experiment_e1_credential_opacity.rs  experiment_e2_confidence_propagation.rs  experiment_e3_context_isolation.rs  experiment_e3_structured_context.rs  experiment_e4_memory_scale.rs  experiment_e4_performance.rs  experiment_e5_durable_execution.rs  generics_test.rs  hello_turn.tn  http_tools_test.rs  identity_test.rs  indexing_test.rs  integration_test.rs  json_tools_test.rs  list_primitives_test.rs  memory_test.rs  mock_test.rs  module_test.rs  native_intelligence_test.rs  package_test.rs  parser_proptest.rs  persistence_test.rs  probabilistic_ops_test.rs  probabilistic_routing_test.rs  probabilistic_test.rs  runner_test.rs  runtime_type_test.rs  sandboxing_test.rs  schema_adapter_test.rs  server_test.rs  std_advanced_module_test.rs  (+14 more)
providers/turn-provider-aws-anthropic/: Cargo.toml
providers/turn-provider-aws-anthropic/src/: lib.rs  main.rs
providers/turn-provider-azure-anthropic/: Cargo.toml
providers/turn-provider-azure-anthropic/src/: lib.rs  main.rs
(+90 files in other folders)
