[package]
name = "turn"
version = "0.1.0"
edition = "2021"
description = "Object-oriented programming language for agentic software"
authors = ["Muyukani Ephraim Kizito <muyukaniephraim@yahoo.com>"]
license = "Apache-2.0"
repository = "https://github.com/ekizito96/Turn"
keywords = ["agent", "language", "agentic", "llm"]
categories = ["development-tools"]

[dev-dependencies]
mockito = "1.2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
