[package]
name = "turn-provider-aws-anthropic"
version = "0.5.0-alpha"
edition = "2021"
description = "Official AWS Bedrock + Anthropic Inference Driver for Turn"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
